[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    "streamlit>=1.48.0",
    "trafilatura>=2.0.0",
    "urllib3>=2.5.0",
    "webdriver-manager>=4.0.2",
]
